--- a/p0061_1layout/src/main/res/values/strings.xml
+++ b/p0061_1layout/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">p0061_1</string>
+    <string name="myscreen">Вертикальная ориентация экрана</string>
+    <string name="HelloWorld">Hello World!</string>
 </resources>
